--- a/app.yaml
+++ b/app.yaml
@@ -12,6 +12,9 @@ handlers:
 - url: /page
   static_dir: static/html
 
+- url: /images
+  static_dir: static/images
+
 - url: /js
   static_dir: static/javascript
 
